# aoc-2021

./: .gitignore  .tool-versions  package.json  pyproject.toml
src/day_1/: day_1.py
src/day_2/: day_2.py
src/day_3/: day_3.py
src/day_4/: day_4.py
src/utils/: data.py
tests/day_1/: test_day_1.py
tests/day_2/: test_day_2.py
tests/day_3/: test_day_3.py
tests/day_4/: test_day_4.py
