[tool.poetry]
name = "advent-of-code-2021"
version = "0.1.0"
description = ""
authors = ["Jake Myshrall <jmyshrall@cvent.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mypy = "^0.910"
black = "^21.11b1"
tox = "^3.24.4"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
mypy-extensions = "^0.4.3"
pytest-mock = "^3.6.1"
types-requests = "^2.26.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
